--- a/templates/login.html
+++ b/templates/login.html
@@ -2,20 +2,47 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Android -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#000000">
+
+  <!-- iOS -->
+  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="CHIPHONE">
+  
 </head>
-<body class="bg-gray-900 text-white flex items-center justify-center min-h-screen">
-  <form method="POST" class="bg-gray-800 p-8 rounded shadow-md w-full max-w-md space-y-4">
-    <h2 class="text-xl font-bold text-center">Iniciar sesión</h2>
+<body class="bg-gray-900 text-white flex items-center justify-center min-h-screen px-4">
+  <div class="w-full max-w-md bg-gray-800 rounded-xl shadow-xl p-6 sm:p-8 space-y-6">
+
+    <div class="text-center">
+      <!-- Logo -->
+      <img src="/static/images/logo.png" alt="Logo"  />
+      <h2 class="text-2xl font-bold">Iniciar sesión</h2>
+    </div>
 
     {% if error %}
       <p class="text-red-500 text-sm text-center">{{ error }}</p>
     {% endif %}
 
-    <input type="text" name="usuario" placeholder="Usuario" required class="w-full p-2 rounded bg-gray-700 text-white" />
-    <input type="password" name="contraseña" placeholder="Contraseña" required class="w-full p-2 rounded bg-gray-700 text-white" />
-    <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 font-bold py-2 rounded">Ingresar</button>
-  </form>
+    <form method="POST" class="space-y-4">
+      <div>
+        <label class="block mb-1 text-sm font-medium text-gray-300">Usuario</label>
+        <input type="text" name="usuario" required class="w-full p-3 rounded bg-gray-700 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Ej: admin" />
+      </div>
+      <div>
+        <label class="block mb-1 text-sm font-medium text-gray-300">Contraseña</label>
+        <input type="password" name="contraseña" required class="w-full p-3 rounded bg-gray-700 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="••••••••" />
+      </div>
+      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 font-bold py-3 rounded transition duration-200">Ingresar</button>
+    </form>
+
+    <p class="text-center text-sm text-gray-400" >¿Olvidaste tu contraseña? Contactanos por WhatsApp</p>
+    
+  </div>
 </body>
 </html>
